examples/complex/bindings/c/example_complex.h

// Automatically generated by Interoptopus.

#ifndef example_complex
#define example_complex

#ifdef __cplusplus
extern "C" {
#endif

#include <stdint.h>
#include <stdbool.h>


// Custom attribute.
#define __FUNCTION_ATTR __declspec( dllimport )
    

#define THE_MAGIC_CONSTANT 666

typedef enum FFIError
    {
    Ok = 0,
    NullPointerPassed = 10,
    } FFIError;

typedef struct Context Context;

typedef struct ThirdPartyVecF32
    {
    float x;
    float y;
    float z;
    float w;
    } ThirdPartyVecF32;

typedef struct Vec3
    {
    float x;
    float y;
    float z;
    } Vec3;

typedef uint32_t (*fptr_fn_u32_rval_u32)(uint32_t x0);

typedef struct SuperComplexEntity
    {
    Vec3 player_1;
    Vec3 player_2;
    uint64_t ammo;
    uint8_t* some_str;
    uint32_t str_len;
    } SuperComplexEntity;

typedef struct WithForeignType
    {
    uint64_t secret_number;
    ThirdPartyVecF32* third_party;
    } WithForeignType;


__FUNCTION_ATTR uint32_t example_api_version();
__FUNCTION_ATTR FFIError example_always_fails();
__FUNCTION_ATTR FFIError example_create_context(Context** context_ptr);
__FUNCTION_ATTR FFIError example_destroy_context(Context** context_ptr);
__FUNCTION_ATTR FFIError example_print_score(Context* context);
__FUNCTION_ATTR FFIError example_return_score(Context* context, uint32_t* score);
__FUNCTION_ATTR FFIError example_update_score_by_callback(Context* context, fptr_fn_u32_rval_u32 update);
__FUNCTION_ATTR FFIError example_write_foreign_type(Context* context, WithForeignType* foreign);
__FUNCTION_ATTR FFIError example_double_super_complex_entity(Context* context, SuperComplexEntity* incoming, SuperComplexEntity* outgoing);

#ifdef __cplusplus
}
#endif

#endif /* example_complex */