examples/complex/bindings/csharp/Interop.cs

// Automatically generated by Interoptopus.

#pragma warning disable 0105
using System;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using My.Company;
#pragma warning restore 0105

namespace My.Company
{
    public static partial class InteropClass
    {
        public const string NativeLib = "example_complex";

        static InteropClass()
        {
        }

        public const uint THE_MAGIC_CONSTANT = (uint) 666;


        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_api_version")]
        public static extern uint example_api_version();

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_always_fails")]
        public static extern FFIError example_always_fails();

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_create_context")]
        public static extern FFIError example_create_context(ref IntPtr context_ptr);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_destroy_context")]
        public static extern FFIError example_destroy_context(ref IntPtr context_ptr);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_print_score")]
        public static extern FFIError example_print_score(IntPtr context);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_return_score")]
        public static extern FFIError example_return_score(IntPtr context, out uint score);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_update_score_by_callback")]
        public static extern FFIError example_update_score_by_callback(IntPtr context, InteropDelegate_fn_u32_rval_u32 update);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_write_foreign_type")]
        public static extern FFIError example_write_foreign_type(IntPtr context, ref ThirdPartyVecF32 foreign);

        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "example_double_super_complex_entity")]
        public static extern FFIError example_double_super_complex_entity(IntPtr context, ref SuperComplexEntity incoming, out SuperComplexEntity outgoing);

    }

    public enum FFIError
    {
        Ok = 0,
        NullPointerPassed = 10,
    }

    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct SuperComplexEntity
    {
        public Vec3 player_1;
        public Vec3 player_2;
        public ulong ammo;
        public IntPtr some_str;
        public uint str_len;
    }

    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct ThirdPartyVecF32
    {
        public float x;
        public float y;
        public float z;
        public float w;
    }

    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Vec3
    {
        public float x;
        public float y;
        public float z;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate uint InteropDelegate_fn_u32_rval_u32(uint x0);



    public class InteropException<T> : Exception
    {
        public T Error { get; private set; }

        public InteropException(T error): base($"Something went wrong: {error}")
        {
            Error = error;
        }
    }

}
